fixed mobile navbar appearing behind

--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -85,7 +85,6 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 100;
     opacity: 80%;
   }
 
